--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ src/ontology/ed_definitions_merged.owl
 src/ontology/patterns 
 *.tmp.obo
 *.tmp.owl
+src/patterns/data/default/*.txt
+src/patterns/data/default/*.ofn
