--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,37 @@
 .DS_Store
 *.tmp
-src/ontology/mirror
-src/ontology/mirror/*
-src/ontology/ddpheno.*
-src/ontology/ddpheno-base.*
-src/ontology/ddpheno-full.*
-semantic.cache
-bin/
-src/ontology/seed.txt
-src/ontology/target/
-src/ontology/dosdp-tools.log
-src/patterns/imports/seed_sorted.txt
-src/ontology/ed_definitions_merged.owl
-src/ontology/patterns 
+*.tmp.json
 *.tmp.obo
 *.tmp.owl
-src/patterns/data/default/*.txt
+bin/
+semantic.cache
+src/ontology/ddpheno-base.*
+src/ontology/ddpheno-basic.*
+src/ontology/ddpheno-full.*
+src/ontology/ddpheno-simple-non-classified.*
+src/ontology/ddpheno-simple.*
+src/ontology/ddpheno.*
+src/ontology/ddpheno.json
+src/ontology/ddpheno.obo
+src/ontology/ddpheno.owl
+src/ontology/dosdp-tools.log
+src/ontology/ed_definitions_merged.owl
+src/ontology/imports/*_terms_combined.txt
+src/ontology/merged-ddpheno-edit.owl
+src/ontology/mirror
+src/ontology/mirror/*
+src/ontology/ontologyterms.txt
+src/ontology/patterns
+src/ontology/reports/*
+src/ontology/seed.txt
+src/ontology/simple_seed.txt
+src/ontology/target/
+src/ontology/tmp/*
+!src/ontology/tmp/README.md
+src/patterns/all_pattern_terms.txt
+src/patterns/data/**/*.ofn
+src/patterns/data/**/*.txt
 src/patterns/data/default/*.ofn
+src/patterns/data/default/*.txt
+src/patterns/imports/seed_sorted.txt
+src/patterns/pattern_owl_seed.txt
