--- a/src/ontology/ddpheno-odk.yaml
+++ b/src/ontology/ddpheno-odk.yaml
@@ -4,7 +4,7 @@ github_org: obophenotype
 repo: dicty-phenotype-ontology
 report_fail_on: none
 use_dosdps: TRUE
-dosdp_tools_options: "--obo-prefixes=true"
+dosdp_tools_options: "--obo-prefixes=true --restrict-axioms-to=logical"
 namespaces: 
   - http://purl.obolibrary.org/obo/DDPHENO_
 license: CC-BY
